fix: properly store stats by extension, simplify searching
