# cmd/api/src/database/dataquality.go
@@ -216,7 +216,7 @@ func (s *BloodhoundDB) CreateOpenGraphDataQualityAggregations(ctx context.Contex
 	return aggregations, CheckError(result)
 }
 
-func (s *BloodhoundDB) GetOpenGraphDataQualityStats(ctx context.Context, environmentID null.String, start time.Time, end time.Time, order string, limit int, skip int) (model.OpenGraphDataQualityStats, int, error) {
+func (s *BloodhoundDB) GetOpenGraphDataQualityStats(ctx context.Context, environmentID null.String, extensionID null.Int32, schemaEnvironmentID null.Int32, start time.Time, end time.Time, order string, limit int, skip int) (model.OpenGraphDataQualityStats, int, error) {
 	const (
 		defaultWhere = "created_at between ? and ?"
 	)
@@ -232,6 +232,12 @@ func (s *BloodhoundDB) GetOpenGraphDataQualityStats(ctx context.Context, environ
 	if environmentID.Valid {
 		query = query.Where("environment_id = ?", environmentID.String)
 	}
+	if extensionID.Valid {
+		query = query.Where("schema_extension_id = ?", extensionID.Int32)
+	}
+	if schemaEnvironmentID.Valid {
+		query = query.Where("schema_environment_id = ?", schemaEnvironmentID.Int32)
+	}
 
 	result = query.Count(&count)
 	if CheckError(result) != nil {
@@ -246,6 +252,12 @@ func (s *BloodhoundDB) GetOpenGraphDataQualityStats(ctx context.Context, environ
 	if environmentID.Valid {
 		query = query.Where("environment_id = ?", environmentID.String)
 	}
+	if extensionID.Valid {
+		query = query.Where("schema_extension_id = ?", extensionID.Int32)
+	}
+	if schemaEnvironmentID.Valid {
+		query = query.Where("schema_environment_id = ?", schemaEnvironmentID.Int32)
+	}
 
 	result = query.Order(order).Find(&openGraphDataQualityStats)
 	if CheckError(result) != nil {
@@ -255,7 +267,7 @@ func (s *BloodhoundDB) GetOpenGraphDataQualityStats(ctx context.Context, environ
 	return openGraphDataQualityStats, int(count), nil
 }
 
-func (s *BloodhoundDB) GetOpenGraphDataQualityAggregations(ctx context.Context, extensionID null.Int32, start time.Time, end time.Time, order string, limit int, skip int) (model.OpenGraphDataQualityAggregations, int, error) {
+func (s *BloodhoundDB) GetOpenGraphDataQualityAggregations(ctx context.Context, extensionID null.Int32, schemaEnvironmentID null.Int32, start time.Time, end time.Time, order string, limit int, skip int) (model.OpenGraphDataQualityAggregations, int, error) {
 	const (
 		defaultWhere = "created_at between ? and ?"
 	)
@@ -271,6 +283,9 @@ func (s *BloodhoundDB) GetOpenGraphDataQualityAggregations(ctx context.Context, 
 	if extensionID.Valid {
 		query = query.Where("schema_extension_id = ?", extensionID.Int32)
 	}
+	if schemaEnvironmentID.Valid {
+		query = query.Where("schema_environment_id = ?", schemaEnvironmentID.Int32)
+	}
 
 	result = query.Count(&count)
 	if CheckError(result) != nil {
@@ -284,6 +299,9 @@ func (s *BloodhoundDB) GetOpenGraphDataQualityAggregations(ctx context.Context, 
 	query = s.Scope(Paginate(skip, limit)).WithContext(ctx).Where(defaultWhere, start, end)
 	if extensionID.Valid {
 		query = query.Where("schema_extension_id = ?", extensionID.Int32)
+	}
+	if schemaEnvironmentID.Valid {
+		query = query.Where("schema_environment_id = ?", schemaEnvironmentID.Int32)
 	}
 
 	result = query.Order(order).Find(&openGraphDataQualityAggregations)
