# cmd/api/src/database/db.go
@@ -149,8 +149,8 @@ type Database interface {
 	GetADDataQualityAggregations(ctx context.Context, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.ADDataQualityAggregations, int, error)
 	GetAzureDataQualityStats(ctx context.Context, tenantId string, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.AzureDataQualityStats, int, error)
 	GetAzureDataQualityAggregations(ctx context.Context, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.AzureDataQualityAggregations, int, error)
-	GetOpenGraphDataQualityStats(ctx context.Context, environmentID null.String, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.OpenGraphDataQualityStats, int, error)
-	GetOpenGraphDataQualityAggregations(ctx context.Context, extensionID null.Int32, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.OpenGraphDataQualityAggregations, int, error)
+	GetOpenGraphDataQualityStats(ctx context.Context, environmentID null.String, extensionID null.Int32, schemaEnvironmentID null.Int32, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.OpenGraphDataQualityStats, int, error)
+	GetOpenGraphDataQualityAggregations(ctx context.Context, extensionID null.Int32, schemaEnvironmentID null.Int32, start time.Time, end time.Time, sort_by string, limit int, skip int) (model.OpenGraphDataQualityAggregations, int, error)
 	DeleteAllDataQuality(ctx context.Context) error
 
 	// Saved Queries
